--- a/RegresAPI/pom.xml
+++ b/RegresAPI/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>json-schema-validator</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy</artifactId>
+			<version>3.0.5</version>
+		</dependency>
 
 	</dependencies>
 </project>
