--- a/RegresAPI/pom.xml
+++ b/RegresAPI/pom.xml
@@ -64,6 +64,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
+				<configuration>
+					<includes>
+					<include>**/*rTest.java</include>
+						<include>**/*Teste.java</include>
+					</includes>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
