--- a/RegresAPI/pom.xml
+++ b/RegresAPI/pom.xml
@@ -66,7 +66,7 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<includes>
-						<include>SuiteTeste.java</include>
+						<include>**/*Teste.java</include>
 					</includes>
 				</configuration>
 			</plugin>
